--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "devDependencies": {
     "axios": "^0.18.1",
-    "bootstrap": "^4.0.0",
+    "bootstrap": "^4.5.3",
     "cross-env": "^5.1",
     "jquery": "^3.5.1",
     "laravel-mix": "^2.0",
@@ -49,6 +49,7 @@
     "npm": "^6.14.8",
     "select2": "^4.0.6-rc.1",
     "sidebarmenu": "^1.0.2",
+    "smartwizard": "^5.1.1",
     "summernote": "^0.8.12",
     "sweetalert": "^2.1.0",
     "sweetalert2": "^7.26.28",
